@@ -1,9 +1,6 @@
 package com.novelbot.api.service.auth;
 
 import io.jsonwebtoken.Claims;
-import io.jsonwebtoken.Jwts;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
@@ -16,51 +13,34 @@ import java.util.concurrent.TimeUnit;
 
 @Service
 public class LogoutService {
-    @Autowired
-    private RedisTemplate<String, String> redisTemplate;
+    private final RedisTemplate<String, String> redisTemplate;
+    private final JwtTokenValidator jwtTokenValidator;
 
-    @Autowired
-    private JwtTokenValidator jwtTokenValidator;
+    private static final String TOKEN_BLACKLIST_PREFIX = "blacklist:";
 
-    @Value("${jwt.secret}")
-    private String jwtSecret;
-
-    private static final String BLACKLIST_KEY = "jwt_blacklist";
+    public LogoutService(RedisTemplate<String, String> redisTemplate, JwtTokenValidator jwtTokenValidator) {
+        this.redisTemplate = redisTemplate;
+        this.jwtTokenValidator = jwtTokenValidator;
+    }
 
     public void logout(String token) {
-        // 입력 유효성 검사
-        if (token == null || token.trim().isEmpty()) {
-            throw new ResponseStatusException(
-                    HttpStatus.BAD_REQUEST,
-                    "Error Code: 400, Bad Request(토큰이 비어 있습니다)"
-            );
+        if (token == null || token.isBlank()) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "토큰이 비어 있습니다");
         }
 
-        try {
-            // JWT 토큰 파싱 및 만료 시간 확인
-            jwtTokenValidator.validateToken(token);
-            Claims claims = Jwts.parser()
-                    .setSigningKey(jwtSecret)
-                    .parseClaimsJws(token)
-                    .getBody();
-            Date expiration = claims.getExpiration();
-            long ttl = expiration.getTime() - System.currentTimeMillis();
-
-            if (ttl <= 0) {
-                throw new ResponseStatusException(
-                        HttpStatus.BAD_REQUEST,
-                        "Error Code: 400, Bad Request(이미 만료된 토큰입니다)"
-                );
-            }
-
-            // Redis에 토큰을 블랙리스트로 저장 (만료 시간까지)
-            redisTemplate.opsForSet().add(BLACKLIST_KEY, token);
-            redisTemplate.expire(BLACKLIST_KEY, ttl, TimeUnit.MILLISECONDS);
-        } catch (Exception e) {
-            throw new ResponseStatusException(
-                    HttpStatus.INTERNAL_SERVER_ERROR,
-                    "Error Code: 500, Internal Server Error(로그아웃 처리 중 오류 발생: " + e.getMessage() + ")"
-            );
+        if (!jwtTokenValidator.validateToken(token)) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "만료되었거나 유효하지 않은 토큰입니다");
         }
+
+        Claims claims = jwtTokenValidator.getClaims(token);
+        Date expiration = claims.getExpiration();
+        long ttl = expiration.getTime() - System.currentTimeMillis();
+
+        if (ttl <= 0) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "이미 만료된 토큰입니다");
+        }
+
+        // 각 토큰을 개별 키로 저장하여 토큰 단위로 expire 관리
+        redisTemplate.opsForValue().set(TOKEN_BLACKLIST_PREFIX + token, "blacklisted", ttl, TimeUnit.MILLISECONDS);
     }
 }
